// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderCompose golden snapshots (built-in catalog) postgres 1`] = `
"# Generated by LocaInfra for stack "sovr". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-sovr"
services:
  postgres:
    image: "postgres:17-alpine"
    container_name: "li-sovr-postgres"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_POSTGRES_PASSWORD}"
      POSTGRES_DB: "sovr"
    ports:
      - "127.0.0.1:5433:5432"
    volumes:
      - "li-sovr-postgres-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "sovr"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-sovr"
volumes:
  li-sovr-postgres-data:
    name: "li-sovr-postgres-data"
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "postgres"
networks:
  li-sovr:
    name: "li-sovr"
    labels:
      locainfra.stack: "sovr"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) redis 1`] = `
"# Generated by LocaInfra for stack "sovr". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-sovr"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "li-sovr-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-sovr-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-sovr"
volumes:
  li-sovr-redis-data:
    name: "li-sovr-redis-data"
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "redis"
networks:
  li-sovr:
    name: "li-sovr"
    labels:
      locainfra.stack: "sovr"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) upstash-redis 1`] = `
"# Generated by LocaInfra for stack "sovr". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-sovr"
services:
  redis:
    image: "redis:7-alpine"
    container_name: "li-sovr-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6380:6379"
    volumes:
      - "li-sovr-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-sovr"
  upstash-redis:
    image: "hiett/serverless-redis-http:latest"
    container_name: "li-sovr-upstash-redis"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_REDIS_PASSWORD}@redis:6379"
    ports:
      - "127.0.0.1:8080:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      redis:
        condition: "service_healthy"
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "upstash-redis"
      locainfra.catalog-id: "upstash-redis"
      locainfra.version: "latest"
    networks:
      - "li-sovr"
volumes:
  li-sovr-redis-data:
    name: "li-sovr-redis-data"
    labels:
      locainfra.stack: "sovr"
      locainfra.service: "redis"
networks:
  li-sovr:
    name: "li-sovr"
    labels:
      locainfra.stack: "sovr"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) global stack with every built-in 1`] = `
"# Generated by LocaInfra for stack "global". Do not edit: changes are overwritten.
# Change the stack from the dashboard or its stack file instead.
name: "li-global"
services:
  postgres:
    image: "postgres:17-alpine"
    container_name: "li-global-postgres"
    restart: "unless-stopped"
    environment:
      POSTGRES_USER: "postgres"
      POSTGRES_PASSWORD: "\${LI_SECRET_POSTGRES_PASSWORD}"
      POSTGRES_DB: "global"
    ports:
      - "127.0.0.1:5432:5432"
    volumes:
      - "li-global-postgres-data:/var/lib/postgresql/data"
    healthcheck:
      test:
        - "CMD"
        - "pg_isready"
        - "-U"
        - "postgres"
        - "-d"
        - "global"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "global"
      locainfra.service: "postgres"
      locainfra.catalog-id: "postgres"
      locainfra.version: "17"
    networks:
      - "li-global"
  redis:
    image: "redis:7-alpine"
    container_name: "li-global-redis"
    restart: "unless-stopped"
    command:
      - "redis-server"
      - "--requirepass"
      - "\${LI_SECRET_REDIS_PASSWORD}"
      - "--appendonly"
      - "yes"
    environment:
      REDISCLI_AUTH: "\${LI_SECRET_REDIS_PASSWORD}"
    ports:
      - "127.0.0.1:6379:6379"
    volumes:
      - "li-global-redis-data:/data"
    healthcheck:
      test:
        - "CMD"
        - "redis-cli"
        - "ping"
      interval: "5s"
      retries: 10
    labels:
      locainfra.stack: "global"
      locainfra.service: "redis"
      locainfra.catalog-id: "redis"
      locainfra.version: "7"
    networks:
      - "li-global"
  upstash-redis:
    image: "hiett/serverless-redis-http:latest"
    container_name: "li-global-upstash-redis"
    restart: "unless-stopped"
    environment:
      SRH_MODE: "env"
      SRH_TOKEN: "\${LI_SECRET_SRH_TOKEN}"
      SRH_CONNECTION_STRING: "redis://:\${LI_SECRET_REDIS_PASSWORD}@redis:6379"
    ports:
      - "127.0.0.1:8079:80"
    healthcheck:
      test:
        - "CMD"
        - "nc"
        - "-z"
        - "127.0.0.1"
        - "80"
      interval: "5s"
      retries: 10
      start_period: "5s"
    depends_on:
      redis:
        condition: "service_healthy"
    labels:
      locainfra.stack: "global"
      locainfra.service: "upstash-redis"
      locainfra.catalog-id: "upstash-redis"
      locainfra.version: "latest"
    networks:
      - "li-global"
volumes:
  li-global-postgres-data:
    name: "li-global-postgres-data"
    labels:
      locainfra.stack: "global"
      locainfra.service: "postgres"
  li-global-redis-data:
    name: "li-global-redis-data"
    labels:
      locainfra.stack: "global"
      locainfra.service: "redis"
networks:
  li-global:
    name: "li-global"
    labels:
      locainfra.stack: "global"
"
`;

exports[`renderCompose golden snapshots (built-in catalog) global stack with every built-in 2`] = `
"# Generated by LocaInfra: secrets for docker compose interpolation. Do not commit.
LI_SECRET_POSTGRES_PASSWORD=pgSecret_0123456789abcdefghijklmnopqrstuvw
LI_SECRET_REDIS_PASSWORD=redisSecret_0123456789abcdefghijklmnopqrst
LI_SECRET_SRH_TOKEN=srhToken_0123456789abcdefghijklmnopqrstuvwx
"
`;
